Impl copy richmenu feature

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -3,7 +3,7 @@
     <div class="card">
       <div class="card-header d-flex align-items-center">
         <%= link_to new_admin_user_path do %>
-          <button type="button" class="btn btn-info fw-120 mr-2"><i class="fa fa-plus"></i> 新規登録 </button>
+          <button type="button" class="btn btn-info fw-120 mr-2"><i class="uil-plus"></i> 新規登録 </button>
         <% end %>
         <%= search_form_for @q, url: search_admin_users_path do |f| %>
           <div class="d-flex">
