--- a/app/views/user/scenario_messages/index.html.erb
+++ b/app/views/user/scenario_messages/index.html.erb
@@ -18,7 +18,7 @@
     <div class="card">
       <div class="card-header d-flex align-items-center">
         <%= link_to new_user_scenario_message_path do %>
-          <button type="button" class="btn btn-success mr-2"><i class="fa fa-plus"></i> メッセージを追加</button>
+          <button type="button" class="btn btn-success mr-2"><i class="uil-plus"></i> メッセージを追加</button>
         <% end %>
         
         <scenario-select-template :scenario_id="<%= @scenario.id %>"></scenario-select-template>
