--- a/app/views/user/home/index.html.erb
+++ b/app/views/user/home/index.html.erb
@@ -30,7 +30,7 @@
         <h5 class="text-muted font-weight-normal mt-0" title="Number of Sent Messages">月のメッセージ送信数</h5>
         <h3 class="mt-3 mb-3">410</h3>
         <p class="mb-0 text-muted">
-          <span class="text-danger mr-2"><i class="mdi mdi-arrow-down-bold"></i> 1.08%</span>
+          <span class="text-danger mr-2"><i class="mdi mdi-arrow-down-bold-bold"></i> 1.08%</span>
           <span class="text-nowrap">Since last month</span>
         </p>
       </div> <!-- end card-body-->
@@ -45,7 +45,7 @@
         <h5 class="text-muted font-weight-normal mt-0" title="Number of Sent Messages">TODO</h5>
         <h3 class="mt-3 mb-3">410</h3>
         <p class="mb-0 text-muted">
-          <span class="text-danger mr-2"><i class="mdi mdi-arrow-down-bold"></i> 1.08%</span>
+          <span class="text-danger mr-2"><i class="mdi mdi-arrow-down-bold-bold"></i> 1.08%</span>
           <span class="text-nowrap">Since last month</span>
         </p>
       </div> <!-- end card-body-->
@@ -60,7 +60,7 @@
         <h5 class="text-muted font-weight-normal mt-0" title="Number of Sent Messages">TODO</h5>
         <h3 class="mt-3 mb-3">410</h3>
         <p class="mb-0 text-muted">
-          <span class="text-danger mr-2"><i class="mdi mdi-arrow-down-bold"></i> 1.08%</span>
+          <span class="text-danger mr-2"><i class="mdi mdi-arrow-down-bold-bold"></i> 1.08%</span>
           <span class="text-nowrap">Since last month</span>
         </p>
       </div> <!-- end card-body-->
