Fix showing only 1 sticker in history and update login ui
* Fix showing only 1 sticker in history and update login ui

* Update password visibility

* Update label remember_me

* Add component InputPassword.vue

* Update devise configs

Co-authored-by: Giap Nguyen <giapnh@yopaz.vn>

--- a/app/views/layouts/auth.html.erb
+++ b/app/views/layouts/auth.html.erb
@@ -17,7 +17,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body data-scrollbar-auto-hide="n">
+  <body data-scrollbar-auto-hide="n" class="authentication-bg">
     <div class="wrapper">
       <div class="content container-fluid">
         <div class="container-fluid" id="application">
