Add important to toast css class

--- a/app/javascript/stylesheets/override.scss
+++ b/app/javascript/stylesheets/override.scss
@@ -106,28 +106,28 @@ td {
 
 // START: Fix toast background bug
 #toast-container > .toast-info {
-  background-image: none;
+  background-image: none !important;
 }
 #toast-container > .toast-error {
-  background-image: none;
+  background-image: none !important;
 }
 #toast-container > .toast-success {
-  background-image: none;
+  background-image: none !important;
 }
 #toast-container > .toast-warning {
-  background-image: none;
+  background-image: none !important;
 }
 
 .toast-success {
-  background-color: #51a351;
+  background-color: #51a351 !important;
 }
 .toast-error {
-  background-color: #bd362f;
+  background-color: #bd362f !important;
 }
 .toast-info {
-  background-color: #2f96b4;
+  background-color: #2f96b4 !important;
 }
 .toast-warning {
-  background-color: #f89406;
+  background-color: #f89406 !important;
 }
 // END: Fix toast background bug
