--- a/app/views/user/scenario_messages/index.html.erb
+++ b/app/views/user/scenario_messages/index.html.erb
@@ -5,7 +5,7 @@
         <ol class="breadcrumb m-0">
           <li class="breadcrumb-item">メッセージ</li>
           <li class="breadcrumb-item"><%= link_to "シナリオ一覧", user_scenarios_path %></li>
-          <li class="breadcrumb-item"><%= @scenario.title.truncate(10) %></li>
+          <li class="breadcrumb-item"><%= @scenario.id %></li>
           <li class="breadcrumb-item active">メッセージ一覧</li>
         </ol>
       </div>
@@ -25,12 +25,11 @@
       </div>
       <div class="card-body">
         <div class="table-responsive">
-          <table class="table table-bordered index">
-          <%# Header %>
-            <thead>
+          <table class="table table-centered mb-0">
+            <thead class="thead-light">
               <tr>
-                <th class="fw-100">日数</th>
-                <th class="fw-200">時刻</th>
+                <th>通目</th>
+                <th>時刻</th>
                 <th>タイトル</th>
                 <th>タイプ</th>
                 <th>メッセージプレビュー</th>
@@ -42,15 +41,26 @@
             <tbody>
               <% @messages.each do |message| %>
                 <tr>
-                  <td><%= schedule_date_for(@scenario, message) %></td>
+                  <td>
+                    <% if message.enabled? %>
+                      <%= message.step %>通目
+                    <% else %>
+                      未設定
+                    <% end %>
+                  </td>
                   <td><%= schedule_time_for(@scenario, message) %></td>
                   <td><%= message.name %></td>
                   <td><message-type-label :data="<%= message.content.to_json %>"/></td>
                   <td><message-content :data="<%= message.content.to_json %>"></message-content></td>
                   <td><%= render_scenario_message_status(message.status) %></td>
                   <td>
-                    <%= link_to '編集', edit_user_scenario_message_path(@scenario, message), class: "btn btn-warning btn-xs" %>
-                    <%= link_to '削除', delete_confirm_user_scenario_message_path(scenario_id: @scenario.id, id: message), remote: true, class: "btn btn-danger btn-xs" %>
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-light btn-sm dropdown-toggle" data-toggle="dropdown" aria-expanded="false"> 操作 <span class="caret"></span> </button>
+                      <div class="dropdown-menu">
+                        <%= link_to 'メッセージを編集', edit_user_scenario_message_path(@scenario, message), class: "dropdown-item" %>
+                        <%= link_to 'メッセージを削除', delete_confirm_user_scenario_message_path(@scenario, message), class: "dropdown-item" %>
+                      </div>
+                    </div>
                   </td>
                 </tr>
               <% end %>
