--- a/app/views/user/base/_left_sidebar_menu.html.erb
+++ b/app/views/user/base/_left_sidebar_menu.html.erb
@@ -21,7 +21,7 @@
       <li class="side-nav-title side-nav-item">1対1トーク</li>
       <!-- トーク -->
       <li class="side-nav-item <%= controller?("user/channels") ? 'mm-active' : '' %>">
-        <%= link_to user_channels_path, class: "side-nav-link #{controller?("user/channels") ? 'active' : '' }" do %>
+        <%= link_to user_channels_path, "data-turbolinks": "false", class: "side-nav-link #{controller?("user/channels") ? 'active' : '' }" do %>
           <i class="uil-comments-alt"></i>
           <span class="badge badge-success float-right">4</span>
           <span> 個別トーク </span>
