--- a/app/javascript/stylesheets/override.scss
+++ b/app/javascript/stylesheets/override.scss
@@ -131,3 +131,7 @@ td {
   background-color: #f89406 !important;
 }
 // END: Fix toast background bug
+
+.content-page {
+  padding-bottom: 0 !important;
+}
