--- a/app/views/user/base/_header.html.erb
+++ b/app/views/user/base/_header.html.erb
@@ -13,6 +13,7 @@
         </span>
         <span>
           <span class="account-user-name"><%= current_user&.name %></span>
+          <span class="account-position">管理者</span>
         </span>
       </a>
       <div class="dropdown-menu dropdown-menu-right dropdown-menu-animated topbar-dropdown-menu profile-dropdown">
