--- a/app/views/user/friends/index.html.erb
+++ b/app/views/user/friends/index.html.erb
@@ -40,7 +40,7 @@
               <th><%= sort_link(@q, :created_at, '登録日時', default_order: :asc) %></th>
               <th>タグ</th>
               <th>状況</th>
-              <th>操作</th>
+              <th class="fw-150">操作</th>
             </tr>
           </thead>
           <%# Data %>
