Add unread marker to chatbox

--- a/app/views/user/channels/show.html.erb
+++ b/app/views/user/channels/show.html.erb
@@ -1,1 +1,1 @@
-<channel-index :activeChannel="<%= @channel_id %>"></channel-index>
+<channel-index :channel_id="<%= @channel_id %>"></channel-index>
