--- a/app/javascript/stylesheets/override.scss
+++ b/app/javascript/stylesheets/override.scss
@@ -1,9 +1,9 @@
 .btn-group-xs > .btn,
 .btn-xs {
-  padding: 1px 5px;
+  padding: 1px 5px !important;
   font-size: 12px !important;
-  line-height: 1.5;
-  border-radius: 3px;
+  line-height: 1.5 !important;
+  border-radius: 3px !important;
 }
 
 .text-sm {
