Convert friends list screen to vue  component

--- a/app/views/user/friends/index.html.erb
+++ b/app/views/user/friends/index.html.erb
@@ -12,65 +12,4 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col-12">
-    <div class="card">
-      <div class="card-header d-flex">
-        <!-- Start: search condition -->
-        <%= search_form_for @q, url: search_user_friends_path, class:"ml-auto d-flex" do |f| %>
-          <%= f.select :status_eq,
-            options_for_select(LineFriend.statuses.keys.map{ |t| [I18n.t("enums.line_friend.status.#{t}"), t] }, @params.present? && @params[:status_eq]), {include_blank: 'すべて状況'}, 
-            class: "form-control fw-150 mr-1" %>
-
-          <div class="input-group app-search mr-0">
-            <%= f.search_field :line_name_or_display_name_cont, placeholder: "検索...", class: "form-control dropdown-toggle fw-250" %>
-            <span class="mdi mdi-magnify search-icon"></span>
-            <div class="input-group-append">
-              <button class="btn btn-primary" type="submit">検索</button>
-            </div>
-          </div>
-        <% end %>
-        <!-- End: search condition -->
-      </div>
-      <div class="card-body">
-        <table class="table table-centered mb-0">
-          <thead class="thead-light">
-            <tr>
-              <th>名前</th>
-              <th><%= sort_link(@q, :created_at, '登録日時', default_order: :asc) %></th>
-              <th>タグ</th>
-              <th>状況</th>
-              <th class="fw-150">操作</th>
-            </tr>
-          </thead>
-          <%# Data %>
-          <tbody>
-            <% @line_friends.each do |line_friend| %>
-              <tr>
-                <td class="table-user">
-                  <img src="<%= line_friend.line_picture_url || '/img/no-image-profile.png' %>" alt="table-user" class="mr-2 rounded-circle" />
-                  <%= line_friend.line_name %>
-                </td>
-                <td><%= formatted_time(line_friend.created_at) %></td>
-                <td><friend-tag :tags="<%= line_friend.tags.select(:name).to_json %>"></friend-tag></td>
-                <td>
-                  <%= render_friend_status(line_friend.status) %>
-                </td>
-                <td>
-                  <%= link_to '詳細', user_friend_path(line_friend), class: "btn btn-sm btn-light" %>
-                </td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
-        <%# Pagination %>
-        <div class="d-flex justify-content-center mt-4">
-          <% if @line_friends.size == 0 %>
-            <b>データはありません。</b>
-          <% end %>
-          <%= paginate @line_friends %>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<friend-index></friend-index> 
