Convert scenarioMessagesIndex screen to vue component

--- a/app/views/user/scenario_messages/index.html.erb
+++ b/app/views/user/scenario_messages/index.html.erb
@@ -13,70 +13,5 @@
     </div>
   </div>
 </div>
-<div class="row">
-  <div class="col-12">
-    <div class="card">
-      <div class="card-header d-flex align-items-center">
-        <%= link_to new_user_scenario_message_path do %>
-          <button type="button" class="btn btn-success mr-2"><i class="uil-plus"></i> メッセージを追加</button>
-        <% end %>
-        
-        <scenario-select-template :scenario_id="<%= @scenario.id %>"></scenario-select-template>
-      </div>
-      <div class="card-body">
-        <div class="table-responsive">
-          <table class="table table-centered mb-0">
-            <thead class="thead-light">
-              <tr>
-                <th>通目</th>
-                <th>時刻</th>
-                <th>メッセージ名</th>
-                <th>タイプ</th>
-                <th>メッセージプレビュー</th>
-                <th class="fw-120">状況</th>
-                <th class="fw-200">操作</th>
-              </tr>
-            </thead>
-            <%# Data %>
-            <tbody>
-              <% @messages.each do |message| %>
-                <tr>
-                  <td>
-                    <% if message.enabled? %>
-                      <%= message.step %>通目
-                    <% else %>
-                      未設定
-                    <% end %>
-                  </td>
-                  <td><%= schedule_time_for(@scenario, message) %></td>
-                  <td><%= message.name&.present? ? message.name : '未設定' %></td>
-                  <td><message-type-label :data="<%= message.content.to_json %>"/></td>
-                  <td><message-content :data="<%= message.content.to_json %>"></message-content></td>
-                  <td><%= render_scenario_message_status(message.status) %></td>
-                  <td>
-                    <div class="btn-group">
-                      <button type="button" class="btn btn-light btn-sm dropdown-toggle" data-toggle="dropdown" aria-expanded="false"> 操作 <span class="caret"></span> </button>
-                      <div class="dropdown-menu">
-                        <%= link_to 'メッセージを編集', edit_user_scenario_message_path(@scenario, message), class: "dropdown-item" %>
-                        <%= link_to 'メッセージを削除', delete_confirm_user_scenario_message_path(@scenario, message), class: "dropdown-item" %>
-                      </div>
-                    </div>
-                  </td>
-                </tr>
-              <% end %>
-            </tbody>
-          </table>
-        </div>
-        <%# Pagination %>
-        <div class="d-flex justify-content-center mt-4">
-          <% if @messages.size == 0 %>
-            <b>データはありません。</b>
-          <% end %>
-          <%= paginate @messages %>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
-<div id='confirmDelContent'></div>
+<scenario-message-index :scenario="<%= @scenario.to_json %>"></scenario-message-index>
