--- a/app/views/user/base/_header.html.erb
+++ b/app/views/user/base/_header.html.erb
@@ -18,32 +18,15 @@
       </a>
       <div class="dropdown-menu dropdown-menu-right dropdown-menu-animated topbar-dropdown-menu profile-dropdown">
         <!-- item-->
-        <div class=" dropdown-header noti-title">
-          <h6 class="text-overflow m-0">Welcome !</h6>
-        </div>
-
-        <!-- item-->
-        <a href="javascript:void(0);" class="dropdown-item notify-item">
+        <%= link_to user_setting_index_path, class: "dropdown-item notify-item" do %>
           <i class="mdi mdi-account-circle mr-1"></i>
-          <span>My Account</span>
-        </a>
-
-        <!-- item-->
-        <a href="javascript:void(0);" class="dropdown-item notify-item">
-          <i class="mdi mdi-account-edit mr-1"></i>
-          <span>Settings</span>
-        </a>
-
-        <!-- item-->
-        <a href="javascript:void(0);" class="dropdown-item notify-item">
-          <i class="mdi mdi-lifebuoy mr-1"></i>
-          <span>Support</span>
-        </a>
+          <span>プロファイル</span>
+        <% end %>
 
         <!-- item-->
         <%= link_to destroy_user_session_path, method: :delete, class: "dropdown-item notify-item" do %>
           <i class="mdi mdi-logout mr-1"></i>
-          <span>Logout</span>
+          <span>ログアウト</span>
         <% end %>
       </div>
     </li>
