Refactor text message editor

--- a/app/views/user/home/index.html.erb
+++ b/app/views/user/home/index.html.erb
@@ -14,7 +14,7 @@
         <h5 class="text-muted font-weight-normal mt-0" title="Number of Customers">友達数</h5>
         <h3 class="mt-3 mb-3"><%= @friend_count %>人</h3>
         <p class="mb-0 text-muted">
-          <span class="text-success mr-2"><i class="mdi mdi-arrow-up-bold"></i> 5.27%</span>
+          <span class="text-success mr-2"><i class="dripicons-chevron-up"></i> 5.27%</span>
           <span class="text-nowrap">Since last month</span>
         </p>
       </div> <!-- end card-body-->
