Add reminder editor

--- a/app/views/user/home/index.html.erb
+++ b/app/views/user/home/index.html.erb
@@ -93,7 +93,7 @@
                 <td>
                   <%= message.sender.name %>
                 </td>
-                <td>
+                <td class="text-prewrap max-2-lines">
                   <%= message.text %>
                 </td>
               </tr>
