Update function and admin interface for admin

--- a/app/javascript/stylesheets/override.scss
+++ b/app/javascript/stylesheets/override.scss
@@ -140,3 +140,9 @@ label {
   display: flex;
   align-items: center;
 }
+
+// START: Css left menu
+.simplebar-content-wrapper {
+  overflow-y: scroll;
+}
+// END: Css left menu
