Update menu icon

--- a/app/views/user/base/_left_sidebar_menu.html.erb
+++ b/app/views/user/base/_left_sidebar_menu.html.erb
@@ -104,7 +104,7 @@
        <!-- 友だち情報欄 -->
       <li class="side-nav-item <%= controller?("user/variables") ? 'mm-active' : '' %>">
         <%= link_to user_variables_path, class: "side-nav-link #{controller?("user/variables" ) ? 'active' : '' }" do %>
-          <i class="uil-tag-alt"></i>
+          <i class="uil-book-reader"></i>
           <span>友だち情報欄</span>
         <% end %>
       </li>
