--- a/app/views/surveys/form.html.erb
+++ b/app/views/surveys/form.html.erb
@@ -1,1 +1,1 @@
-<survey-form id="<%= @survey_id %>" friend_id="<%= @friend_id %>"></survey-form>
+<survey-form code="<%= @code %>" friend_id="<%= @friend_id %>"></survey-form>
