Fix bug on auto response page

--- a/app/views/user/friends/show.html.erb
+++ b/app/views/user/friends/show.html.erb
@@ -13,4 +13,4 @@
   </div>
 </div>
 
-<friend-detail :friend_id="<%= @friend.id %>" channel_id="<%= @friend.channel.id %>"></friend-detail>
+<friend-detail friend_id="<%= @friend.id %>" channel_id="<%= @friend.channel&.id %>"></friend-detail>
