--- a/app/views/user/surveys/answers.html.erb
+++ b/app/views/user/surveys/answers.html.erb
@@ -52,7 +52,9 @@
         </tbody>
       </table>
       <div class="text-center">
-        <%= paginate @answered_users, param_name: :user_page %>
+        <div>
+          <%= paginate @answered_users, param_name: :user_page %>
+        </div>
       </div>
     </div>
     <div class="tab-pane" id="answers">
@@ -65,24 +67,37 @@
           </tr>
         </thead>
         <tbody>
-          <% @answers.each do |answer| %>
+          <% @responses.each do |response| %>
             <tr>
-              <td class="table-user d-flex">
+              <td class="table-user d-flex align-items-center">
                 <img
-                  src="<%= answer.line_friend.line_picture_url || '/img/no-image-profile.png' %>"
+                  src="<%= response.line_friend.line_picture_url || '/img/no-image-profile.png' %>"
                   alt="table-user"
                   class="mr-2 rounded-circle"
                 />
-                <p class="text-ove m-0"><%= answer.line_friend.display_name %></p>
+                <p class="m-0"><%= response.line_friend.display_name %></p>
               </td>
-              <td></td>
-              <td><%= answer.created_at.strftime('%Y.%m.%d %H:%M') %></td>
+              <td>
+                <table class="table table-striped table-bordered text-break">
+                  <tbody>
+                    <% response.survey_answers.each do |answer| %>
+                      <tr>
+                        <th width="40%"><%= answer.survey_question.content['text'] %></th>
+                        <td width="60%"><%= answer.answer %></td>
+                      </tr>
+                    <% end %>
+                  </tbody>
+                </table>
+              </td>
+              <td><%= response.created_at.strftime('%Y.%m.%d %H:%M') %></td>
             </tr>
           <% end %>
         </tbody>
       </table>
       <div class="text-center">
-        <%= paginate @answers, param_name: :answer_page %>
+        <div>
+          <%= paginate @responses, param_name: :response_page %>
+        </div>
       </div>
     </div>
   </div>
