--- a/app/views/user/surveys/answers.html.erb
+++ b/app/views/user/surveys/answers.html.erb
@@ -42,8 +42,8 @@
         <tbody>
           <% @answered_users.each do |user| %>
             <tr>
-              <td><%= user['display_name'] %></td>
-              <td><%= user['answered_at'].strftime('%Y.%m.%d %H:%M') %></td>
+              <td class="mxw-500 text-truncate"><%= user['display_name'] %></td>
+              <td class="mxw-400"><%= user['answered_at'].strftime('%Y.%m.%d %H:%M') %></td>
               <td>
                 <div class="btn btn-sm btn-secondary">回答表示</div>
               </td>
@@ -75,21 +75,17 @@
                   alt="table-user"
                   class="mr-2 rounded-circle"
                 />
-                <p class="m-0"><%= response.line_friend.display_name %></p>
+                <p class="m-0 text-truncate"><%= response.line_friend.display_name %></p>
               </td>
-              <td>
-                <table class="table table-striped table-bordered text-break">
-                  <tbody>
-                    <% response.survey_answers.each do |answer| %>
-                      <tr>
-                        <th width="40%"><%= answer.survey_question.content['text'] %></th>
-                        <td width="60%"><%= answer.answer %></td>
-                      </tr>
-                    <% end %>
-                  </tbody>
-                </table>
+              <td class="fw-400">
+                <% response.survey_answers.each do |answer| %>
+                  <div class="d-flex border-bottom border-light">
+                    <div class="fw-200 font-weight-bold mr-2"><%= answer.survey_question.content['text'] %></div>
+                    <div class="fw-200"><%= answer.answer %></div>
+                  </div>
+                <% end %>
               </td>
-              <td><%= response.created_at.strftime('%Y.%m.%d %H:%M') %></td>
+              <td class="mxw-200"><%= response.created_at.strftime('%Y.%m.%d %H:%M') %></td>
             </tr>
           <% end %>
         </tbody>
