Send broadcast to friends by assigned tags

--- a/app/views/user/base/_left_sidebar_menu.html.erb
+++ b/app/views/user/base/_left_sidebar_menu.html.erb
@@ -2,9 +2,9 @@
 <div class="left-side-menu">
 
   <!-- LOGO -->
-  <a href="index.html" class="logo text-center logo-light">
+  <%= link_to user_root_path, class: "logo text-center logo-light" do %>
     <span class="text-white brand-text font-weight-bold">LINE INSIGHT</span>
-  </a>
+  <% end %>
 
   <div class="h-100" id="left-side-menu-container" data-simplebar>
 
