--- a/app/views/user/home/index.html.erb
+++ b/app/views/user/home/index.html.erb
@@ -28,7 +28,7 @@
           <i class="mdi mdi-send widget-icon"></i>
         </div>
         <h5 class="text-muted font-weight-normal mt-0" title="Number of Sent Messages">月のメッセージ送信数</h5>
-        <h3 class="mt-3 mb-3"><%= @insight.api_push || 0 %>メッセージ</h3>
+        <h3 class="mt-3 mb-3"><%= @insight&.api_push || 0 %>メッセージ</h3>
         <p class="mb-0 text-muted" hidden>
           <span class="text-danger mr-2"><i class="mdi mdi-arrow-down-bold-bold"></i> 1.08%</span>
           <span class="text-nowrap">Since last month</span>
