--- a/app/views/user/surveys/answers.html.erb
+++ b/app/views/user/surveys/answers.html.erb
@@ -77,15 +77,23 @@
                 />
                 <p class="m-0 text-truncate"><%= response.line_friend.display_name %></p>
               </td>
-              <td class="fw-400">
+              <td class="mw-400">
+                <label>フォームの回答</label>
                 <% response.survey_answers.each do |answer| %>
-                  <div class="d-flex border-bottom border-light">
-                    <div class="fw-200 font-weight-bold mr-2"><%= answer.survey_question.content['text'] %></div>
-                    <div class="fw-200"><%= answer.answer %></div>
+                  <div class="divider my-2"></div>
+                  <div class="d-flex border-bottom border-light my-1">
+                    <div class="fw-200 mr-2"><%= answer.survey_question.content['text'] %></div>
+                    <div class="fw-200">
+                      <% if answer.survey_question.file? %>
+                        <img class="fw-120 fh-81 thumbnail" src="<%= rails_blob_url(answer.file) if answer.file.attached? %>">
+                      <% else %>
+                        <%= answer.answer %>
+                      <% end %>
+                    </div>
                   </div>
                 <% end %>
               </td>
-              <td class="mxw-200"><%= response.created_at.strftime('%Y.%m.%d %H:%M') %></td>
+              <td class="mw-200"><%= response.created_at.strftime('%Y.%m.%d %H:%M') %></td>
             </tr>
           <% end %>
         </tbody>
