--- a/app/views/user/home/index.html.erb
+++ b/app/views/user/home/index.html.erb
@@ -27,7 +27,7 @@
         <div class="card widget-flat">
           <div class="card-body">
             <div class="float-right">
-              <i class="mdi mdi-send widget-icon"></i>
+              <i class="mdi mdi-send widget-icon widget-danger"></i>
             </div>
             <h5 class="text-muted font-weight-normal mt-0" title="Number of Sent Messages">月のメッセージ送信数</h5>
             <h3 class="mt-3 mb-3"><%= @insight&.api_push || 0 %>メッセージ</h3>
@@ -41,7 +41,7 @@
     </div>
 
     <div class="card">
-      <div class="card-header text-md">
+      <div class="card-header border-bottom border-primary text-md">
         <b>最新受信メッセージ一覧</b>
       </div>
       <div class="card-body p-0">
@@ -64,7 +64,7 @@
                   <td>
                     <%= message.sender.name %>
                   </td>
-                  <td class="text-prewrap max-2-lines">
+                  <td class="max-2-lines">
                     <%= message.text %>
                   </td>
                 </tr>
