Add success and error page after answer a form

--- a/app/views/surveys/answer_success.html.erb
+++ b/app/views/surveys/answer_success.html.erb
@@ -1,6 +1,6 @@
 <div class="alert alert-success" role="alert">
-    <h4 class="alert-heading">回答完了!</h4>
-    <p>回答完了</p>
-    <hr>
-    <p class="mb-0">ご回答ありがとうございました。</p>
+  <h4 class="alert-heading">送信完了</h4>
+  <p>ご回答ありがとうございました！</p>
+  <hr>
+  <p class="mb-0">上部✖︎ボタンを押して終了してください</p>
 </div>
