Change service name from LINE INSIGHT to LINE CMS

--- a/app/views/user/base/_left_sidebar_menu.html.erb
+++ b/app/views/user/base/_left_sidebar_menu.html.erb
@@ -2,8 +2,8 @@
 <div class="left-side-menu">
 
   <!-- LOGO -->
-  <%= link_to user_root_path, class: "logo text-center logo-light" do %>
-    <span class="text-white brand-text font-weight-bold">LINE INSIGHT</span>
+  <%= link_to user_root_path, class: "logo ml-4 logo-light" do %>
+    <span class="text-white brand-text font-weight-bold">LINE CMS</span>
   <% end %>
 
   <div class="h-100" id="left-side-menu-container" data-simplebar>
