--- a/app/views/admin/base/_left_sidebar_menu.html.erb
+++ b/app/views/admin/base/_left_sidebar_menu.html.erb
@@ -1,8 +1,8 @@
   <!-- ========== Left Sidebar Start ========== -->
 <div class="left-side-menu">
   <!-- LOGO -->
-  <a href="index.html" class="logo text-center logo-light">
-    <span class="text-white brand-text font-weight-bold">LINE INSIGHT</span>
+  <a href="index.html" class="logo ml-4 logo-light">
+    <span class="text-white brand-text font-weight-bold">LINE CMS</span>
   </a>
 
   <div class="h-100" id="left-side-menu-container" data-simplebar>
