Add admin ability and refactoring account controller

--- a/app/views/admin/accounts/edit.html.erb
+++ b/app/views/admin/accounts/edit.html.erb
@@ -3,12 +3,12 @@
     <div class="page-title-box">
       <div class="page-title-right">
         <ol class="breadcrumb m-0">
-          <li class="breadcrumb-item"><%= link_to 'クライアント一覧',  admin_accounts_path %></>
+          <li class="breadcrumb-item"><%= link_to '管理者一覧',  admin_accounts_path %></>
           <li class="breadcrumb-item"><%= @account.name %></>
-          <li class="breadcrumb-item">クライアント編集</li>
+          <li class="breadcrumb-item">管理者編集</li>
         </ol>
       </div>
-      <h4 class="page-title">クライアント編集</h4>
+      <h4 class="page-title">管理者編集</h4>
     </div>
   </div>
 </div>
