--- a/app/views/admin/accounts/new.html.erb
+++ b/app/views/admin/accounts/new.html.erb
@@ -3,11 +3,11 @@
     <div class="page-title-box">
       <div class="page-title-right">
         <ol class="breadcrumb m-0">
-          <li class="breadcrumb-item"><%= link_to 'クライアント一覧',  admin_accounts_path %></>
-          <li class="breadcrumb-item active">新規クライアント登録</li>
+          <li class="breadcrumb-item"><%= link_to '管理者一覧',  admin_accounts_path %></>
+          <li class="breadcrumb-item active">新規管理者登録</li>
         </ol>
       </div>
-      <h4 class="page-title">新規クライアント登録</h4>
+      <h4 class="page-title">新規管理者登録</h4>
     </div>
   </div>
 </div>
