--- a/app/views/admin/accounts/index.html.erb
+++ b/app/views/admin/accounts/index.html.erb
@@ -3,11 +3,11 @@
     <div class="page-title-box">
       <div class="page-title-right">
         <ol class="breadcrumb m-0">
-          <li class="breadcrumb-item">クライアント</li>
-          <li class="breadcrumb-item active">クライアント一覧</li>
+          <li class="breadcrumb-item">管理者</li>
+          <li class="breadcrumb-item active">管理者一覧</li>
         </ol>
       </div>
-      <h4 class="page-title">クライアント一覧</h4>
+      <h4 class="page-title">管理者一覧</h4>
     </div>
   </div>
 </div>
