--- a/app/views/admin/base/_left_sidebar_menu.html.erb
+++ b/app/views/admin/base/_left_sidebar_menu.html.erb
@@ -17,12 +17,14 @@
         </li>
       <% end %>
 
-      <li class="side-nav-item <%= controller?("admin/users") ? 'mm-active' : '' %>">
-        <%= link_to admin_users_path, class: "side-nav-link #{controller?("admin/users") ? 'active' : '' }" do %>
-          <i class="uil-users-alt"></i>
-          <span> クライアント一覧 </span>
-        <% end %>
-      </li>
+      <ul class="metismenu side-nav">
+        <li class="side-nav-item <%= controller?("admin/agencies") ? 'mm-active' : '' %>">
+          <%= link_to admin_agencies_path, class: "side-nav-link #{controller?("admin/agencies") ? 'active' : '' }" do %>
+            <i class="uil-users-alt"></i>
+            <span> 代理店一覧 </span>
+          <% end %>
+        </li>
+      </ul>
 
       <!-- トーク -->
       <li class="side-nav-item <%= controller?("admin/announcements") ? 'mm-active' : '' %>">
