Add agency index page

--- a/app/views/admin/agencies/index.html.erb
+++ b/app/views/admin/agencies/index.html.erb
@@ -1,1 +1,14 @@
-xxxxxx
+<div class="row">
+  <div class="col-12">
+    <div class="page-title-box">
+      <div class="page-title-right">
+        <ol class="breadcrumb m-0">
+          <li class="breadcrumb-item">代理店</li>
+          <li class="breadcrumb-item active">代理店一覧</li>
+        </ol>
+      </div>
+      <h4 class="page-title">代理店一覧</h4>
+    </div>
+  </div>
+</div>
+<admin-agency-index></admin-agency-index>
