--- a/app/views/user/home/index.html.erb
+++ b/app/views/user/home/index.html.erb
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="col-lg-8">
     <div class="row">
-      <div class="col-6">
+      <div class="col-lg-6">
         <div class="card widget-flat">
           <div class="card-body">
             <div class="float-right">
@@ -23,7 +23,7 @@
         </div> <!-- end card-->
       </div> <!-- end col-->
 
-      <div class="col-6">
+      <div class="col-lg-6">
         <div class="card widget-flat">
           <div class="card-body">
             <div class="float-right">
