--- a/app/views/admin/base/_header.html.erb
+++ b/app/views/admin/base/_header.html.erb
@@ -30,7 +30,7 @@
 
   </ul>
   <div class="float-left d-sm-block d-md-none ml-3">
-    <%= link_to user_root_path, class: "logo ml-4 logo-light" do %>
+    <%= link_to admin_root_path, class: "logo ml-4 logo-light" do %>
       <span class="text-dark brand-text font-weight-bold">LINE CMS</span>
     <% end %>
   </div>
