--- a/app/views/agency/users/new.html.erb
+++ b/app/views/agency/users/new.html.erb
@@ -3,7 +3,7 @@
     <div class="page-title-box">
       <div class="page-title-right">
         <ol class="breadcrumb m-0">
-          <li class="breadcrumb-item"><%= link_to 'クライアント一覧',  admin_users_path %></>
+          <li class="breadcrumb-item"><%= link_to 'クライアント一覧',  admin_users_path %></li>
           <li class="breadcrumb-item active">新規クライアント登録</li>
         </ol>
       </div>
@@ -12,4 +12,4 @@
   </div>
 </div>
 
-<user-create></user-create>
+<user-new></user-new>
