--- a/app/views/agency/users/edit.html.erb
+++ b/app/views/agency/users/edit.html.erb
@@ -3,8 +3,8 @@
     <div class="page-title-box">
       <div class="page-title-right">
         <ol class="breadcrumb m-0">
-          <li class="breadcrumb-item"><%= link_to 'クライアント一覧',  admin_users_path %></>
-          <li class="breadcrumb-item"><%= @user.name %></>
+          <li class="breadcrumb-item"><%= link_to 'クライアント一覧',  admin_users_path %></li>
+          <li class="breadcrumb-item"><%= @user.name %></li>
           <li class="breadcrumb-item">クライアント編集</li>
         </ol>
       </div>
