Add client model

--- a/app/views/admin/base/_left_sidebar_menu.html.erb
+++ b/app/views/admin/base/_left_sidebar_menu.html.erb
@@ -21,7 +21,7 @@
         <li class="side-nav-item <%= controller?("admin/agencies") ? 'mm-active' : '' %>">
           <%= link_to admin_agencies_path, class: "side-nav-link #{controller?("admin/agencies") ? 'active' : '' }" do %>
             <i class="uil-users-alt"></i>
-            <span> 代理店一覧 </span>
+            <span> 契約者一覧 </span>
           <% end %>
         </li>
       </ul>
