--- a/app/views/admin/agencies/edit.html.erb
+++ b/app/views/admin/agencies/edit.html.erb
@@ -3,13 +3,13 @@
     <div class="page-title-box">
       <div class="page-title-right">
         <ol class="breadcrumb m-0">
-          <li class="breadcrumb-item">代理店</li>
-          <li class="breadcrumb-item"><%= link_to '代理店一覧',  admin_agencies_path %></li>
+          <li class="breadcrumb-item">契約者</li>
+          <li class="breadcrumb-item"><%= link_to '契約者一覧',  admin_agencies_path %></li>
           <li class="breadcrumb-item"><%= @agency.id %></li>
-          <li class="breadcrumb-item">代理店編集</li>
+          <li class="breadcrumb-item">契約者編集</li>
         </ol>
       </div>
-      <h4 class="page-title">代理店編集</h4>
+      <h4 class="page-title">契約者編集</h4>
     </div>
   </div>
 </div>
