CRUD for staff management

--- a/app/views/user/staffs/new.html.erb
+++ b/app/views/user/staffs/new.html.erb
@@ -4,12 +4,13 @@
       <div class="page-title-right">
         <ol class="breadcrumb m-0">
           <li class="breadcrumb-item">営業担当</a></li>
-          <li class="breadcrumb-item">営業担当一覧</li>
+          <li class="breadcrumb-item"><%= link_to '営業担当一覧', user_staffs_path %></li>
+          <li class="breadcrumb-item active">新規営業担当登録</li>
         </ol>
       </div>
-      <h4 class="page-title">営業担当一覧</h4>
+      <h4 class="page-title">新規営業担当登録</h4>
     </div>
   </div>
 </div>
 
-<staff-index></staff-index> 
+<staff-new></staff-new> 
