--- a/app/views/user/auto_responses/edit.html.erb
+++ b/app/views/user/auto_responses/edit.html.erb
@@ -1,1 +1,15 @@
+<div class="row">
+  <div class="col-12">
+    <div class="page-title-box">
+      <div class="page-title-right">
+        <ol class="breadcrumb m-0">
+          <li class="breadcrumb-item">メッセージ</li>
+          <li class="breadcrumb-item active"><%= link_to "自動応答一覧", user_auto_responses_path %></li>
+          <li class="breadcrumb-item active">新規自動応答編集</li>
+        </ol>
+      </div>
+      <h4 class="page-title">新規自動応答編集</h4>
+    </div>
+  </div>
+</div>
 <auto-response-editor :auto_response_id="<%= @auto_response_id %>"></auto-response-editor>
