--- a/app/views/user/scenarios/edit.html.erb
+++ b/app/views/user/scenarios/edit.html.erb
@@ -1,1 +1,16 @@
+<div class="row">
+  <div class="col-12">
+    <div class="page-title-box">
+      <div class="page-title-right">
+        <ol class="breadcrumb m-0">
+          <li class="breadcrumb-item">メッセージ</li>
+          <li class="breadcrumb-item"><%= link_to "シナリオ一覧", user_scenarios_path %></li>
+          <li class="breadcrumb-item active"><%= @scenario_id %></li>
+          <li class="breadcrumb-item active">新規シナリオ編集</li>
+        </ol>
+      </div>
+      <h4 class="page-title">新規シナリオ編集</h4>
+    </div>
+  </div>
+</div>
 <scenario-editor :scenario_id="<%= @scenario_id %>"></scenario-editor>
