--- a/app/views/user/rich_menus/edit.html.erb
+++ b/app/views/user/rich_menus/edit.html.erb
@@ -1,1 +1,16 @@
+<div class="row">
+  <div class="col-12">
+    <div class="page-title-box">
+      <div class="page-title-right">
+        <ol class="breadcrumb m-0">
+          <li class="breadcrumb-item">メッセージ</li>
+          <li class="breadcrumb-item"><%= link_to 'リッチメニュー一覧', user_rich_menus_path %></li>
+          <li class="breadcrumb-item active">リッチメニュー編集</li>
+        </ol>
+      </div>
+      <h4 class="page-title">リッチメニュー編集</h4>
+    </div>
+  </div>
+</div>
+
 <rich-menu-editor :rich_menu_id="<%= @rich_menu_id %>"></rich-menu-editor>
