--- a/app/views/user/home/index.html.erb
+++ b/app/views/user/home/index.html.erb
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="col-lg-8">
     <div class="row">
-      <div class="col-lg-6">
+      <div class="col-xl-6">
         <div class="card widget-flat">
           <div class="card-body">
             <div class="float-right">
@@ -23,14 +23,14 @@
         </div> <!-- end card-->
       </div> <!-- end col-->
 
-      <div class="col-lg-6">
+      <div class="col-xl-6">
         <div class="card widget-flat">
           <div class="card-body">
             <div class="float-right">
               <i class="mdi mdi-send widget-icon widget-danger"></i>
             </div>
             <h5 class="text-muted font-weight-normal mt-0" title="Number of Sent Messages">月のメッセージ送信数</h5>
-            <h3 class="mt-3 mb-3"><%= @insight&.api_push || 0 %>メッセージ</h3>
+            <h3 class="mt-3 mb-3"><%= @insight&.total_usage || 0 %> / <%= @insight&.quota || '-' %>メッセージ</h3>
             <p class="mb-0 text-muted" hidden>
               <span class="text-danger mr-2"><i class="mdi mdi-arrow-down-bold-bold"></i> 1.08%</span>
               <span class="text-nowrap">Since last month</span>
@@ -72,7 +72,7 @@
             </tbody>
           </table>
         <% else %>
-          <div class="my-4 font-weight-bold text-center">メッセージはありません。</div>
+          <div class="my-5 font-weight-bold text-center">メッセージはありません。</div>
         <% end %>
       </div>
     </div>
